<resources>
    <string name="app_name">Ass1</string>
    <string name="sender_details">Sender Details</string>
    <string name="receiver_details">Receiver Details</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="contact_info">Contact Information</string>
    <string name="review_information">Review Information</string>
</resources>